--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </form>
       </section>
       <section class="search">
-        <h3 class="search__title">Book search</h3>
+        <h3 class="search__title">Search book</h3>
         <div class="search__autocomplete-box">
           <div class="search__find-options">
             <div class="search__radio-block">
